Fix styling issue on mobile

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -31,6 +31,7 @@
 
                         img {
                             height: 80px !important;
+                            width: inherit;
                         }
                     }
                 }
